Add reload-prom.sh - Fixed IP for run-prom.sh

--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -20,14 +20,14 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'node-exporter'
+  - job_name: 'prometheus'
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
     static_configs:
-      - targets: ['localhost:9090']
       - targets: ['10.255.0.11:9100']
       - targets: ['10.255.0.12:9100']
       - targets: ['10.255.0.13:9100']
+      - targets: ['10.255.0.13:9090']
 
