--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -393,7 +393,7 @@ root_url = http://kh.alert.rocks
 [external_image_storage]
 # Used for uploading images to public servers so they can be included in slack/email messages.
 # you can choose between (s3, webdav)
-provider =
+provider = local
 
 [external_image_storage.s3]
 ;bucket_url =
