--- a/prom/conf/prometheus.yml
+++ b/prom/conf/prometheus.yml
@@ -21,13 +21,15 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
-      - targets: ['10.255.0.11:9100']
-      - targets: ['10.255.0.12:9100']
-      - targets: ['10.255.0.13:9100']
-      - targets: ['10.255.0.13:9090']
+      - targets: ['10.10.0.10:9090']
 
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['10.10.0.10:9100']
+      - targets: ['10.10.0.11:9100']
+      - targets: ['10.10.0.12:9100']
+
+  - job_name: 'kong'
+    static_configs:
+      - targets: ['10.10.0.10:8001']
